[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vaultutils"
dynamic = ["version"]
description = 'A tool for efficient Vault authentication and secret fetching'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["vault", "authentication", "secrets", "qatoolist", "automation", "testing", "utils"]
authors = [
  { name = "Anand Chavan", email = "qatoolist@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "hvac",
    "click",
    "flask",
    "requests",
    "playwright",
    "gunicorn",
    "cachetools",
]

scripts = { "vaultutils" = "vaultutils.cli:cli" }

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "pytest-mock",
    "hatch-vcs",
]

build = [
  "hatch-vcs"
]

[project.urls]
Documentation = "https://github.com/qatoolist/vaultutils#readme"
Issues = "https://github.com/qatoolist/vaultutils/issues"
Source = "https://github.com/qatoolist/vaultutils"

[tool.hatch.version]
raw-options.version_scheme = "calver-by-date"
source="vcs"

[tool.hatch.envs.types]
extra-dependencies = [
  "pre-commit",
  "pre-commit-hooks",
  "mypy>=1.0.0",
  "pytest",
  "ruff",
  "black",
  "hatch-vcs"
]

[tool.hatch.envs.lint]
extra-dependencies = [
  "mypy>=1.0.0",
  "ruff>=0.1.6",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/words_tui tests}"
style = [
  "ruff {args:.}",
  "ruff format {args:.}",
]
fmt = [
  "ruff {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/vaultutils tests}"

[tool.coverage.run]
source_pkgs = ["vaultutils", "tests"]
branch = true
parallel = true
omit = [
  "src/vaultutils/__about__.py",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.build.targets.wheel]
packages = ["src/vaultutils"]

[tool.hatch.build.targets.sdist]
include = ["src/vaultutils", "Makefile", "pyproject.toml", "README.md"]

[tool.coverage.paths]
vaultutils = ["src/vaultutils", "*/vaultutils/src/vaultutils"]
tests = ["tests", "*/vaultutils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = ["E501", "PLW0602", "PLW0603", "B904", "S603", "S607", ]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["vaultutils"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
